Set min-width to avoid wrapping.

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -237,6 +237,8 @@ footer {
 
   div {
     &.search {
+      min-width: 350px;
+
       input {
         width: 280px;
         outline: none;
